Task5/k8s/admin-api-allow.yaml
# allow admin-front-end -> admin-back-end-api && 
#       admin-front-end <- admin-back-end-api .. net policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-front-end
